--- a/alx.html
+++ b/alx.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#homepage">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#about">About</a></li>
             </ul>
