--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="./Images/alxpics.webp" alt="Cover Image">
         <h1>ALX Journal</h1>
         <p>A journal is a record of events, ideas, or reflections kept regularly for private use. It is a personal document that can be used to track your progress towards goals, document your experiences, or simply reflect on your thoughts and feelings.</p>
-        <a href="https://alx-portfolio-five.vercel.app/" class="cta-button">Go to Project</a>
+        <a href="https://journal-japhetaline.vercel.app/" class="cta-button">Go to Project</a>
     </section>
     <section id="features" class="features">
         <!-- Feature 1 -->
